--- a/053 wikidata čištění 2.ipynb
+++ b/053 wikidata čištění 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "id": "5f9e73ad",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "id": "842c4314",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "id": "c6320fe3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "id": "ca8be151",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "id": "6130b6a3",
    "metadata": {},
    "outputs": [
@@ -59,37 +59,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_17740\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_26480\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n"
      ]
     },
@@ -337,7 +337,7 @@
        "25  spotify_odberatele        10        1170              10"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "id": "c8944913",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "id": "594569ea",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "id": "e4a809e0",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "id": "d9fcda82",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
    "id": "137dc3fa",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 98,
    "id": "520c4aa5",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
    "id": "1779ae4f",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 100,
    "id": "0b0afeac",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        " 'Atmo Music']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "id": "168381bc",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "id": "4ad064c6",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 103,
    "id": "410751af",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 104,
    "id": "1592d7bb",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 105,
    "id": "1cffe1a1",
    "metadata": {},
    "outputs": [],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
    "id": "43ebdfbe",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "id": "c93f9579",
    "metadata": {},
    "outputs": [],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "id": "c6a207a8",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "id": "1347d6c6",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "id": "412eaca0",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "id": "528a6a82",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "id": "7b3dd14b",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "id": "3ae68242",
    "metadata": {},
    "outputs": [],
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "id": "b7ae0e82",
    "metadata": {},
    "outputs": [
@@ -963,13 +963,179 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b100[b100['velikost'].isnull()].groupby('interpret_hlavni').size().nlargest(60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af5a53b",
+   "metadata": {},
+   "source": [
+    "## Země původu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "84f26121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zeme_puvodu\n",
+       "Česko                             300\n",
+       "Spojené státy americké            289\n",
+       "Spojené království                190\n",
+       "Německo                            46\n",
+       "Slovensko                          37\n",
+       "Kanada                             32\n",
+       "Švédsko                            31\n",
+       "Austrálie                          23\n",
+       "Francie                            19\n",
+       "Nizozemsko                         18\n",
+       "Itálie                             13\n",
+       "Irsko                               9\n",
+       "Švýcarsko                           8\n",
+       "Belgie                              7\n",
+       "Rumunsko                            7\n",
+       "Finsko                              6\n",
+       "Norsko                              6\n",
+       "Rusko                               6\n",
+       "Jižní Korea                         5\n",
+       "Polsko                              5\n",
+       "Dánsko                              3\n",
+       "Jamajka                             3\n",
+       "Jihoafrická republika               3\n",
+       "Kazachstán                          3\n",
+       "Kolumbie                            3\n",
+       "Nový Zéland                         3\n",
+       "Rakousko                            3\n",
+       "Barbados                            2\n",
+       "Filipíny                            2\n",
+       "Island                              2\n",
+       "Konžská demokratická republika      2\n",
+       "Kosovo                              2\n",
+       "Kuba                                2\n",
+       "Libanon                             2\n",
+       "Trinidad a Tobago                   2\n",
+       "Ukrajina                            2\n",
+       "Španělsko                           2\n",
+       "Alžírsko                            1\n",
+       "Arménie                             1\n",
+       "Brazílie                            1\n",
+       "Ghana                               1\n",
+       "Izrael                              1\n",
+       "Japonsko                            1\n",
+       "Jemen                               1\n",
+       "Lichtenštejnsko                     1\n",
+       "Litva                               1\n",
+       "Maroko                              1\n",
+       "Nigérie                             1\n",
+       "Papua Nová Guinea                   1\n",
+       "Singapur                            1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('zeme_puvodu').size().nlargest(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "24b3834a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Alice Merton', 'J. Cole']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['zeme_puvodu'] == 'Svatá říše římská']['interpret_hlavni'].drop_duplicates().to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "5c5c52d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'Moskevské knížectví',\"zeme_puvodu\"]=\"Rusko\"\n",
+    "df.loc[df['zeme_puvodu'] == 'Ruské impérium',\"zeme_puvodu\"]=\"Rusko\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "401ef5e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'Braniborské markrabství',\"zeme_puvodu\"]=\"Německo\"\n",
+    "df.loc[df['zeme_puvodu'] == 'Svatá říše římská',\"zeme_puvodu\"]=\"Německo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "159fc59e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'České knížectví',\"zeme_puvodu\"]=\"Česko\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b6719957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'Německá demokratická republika',\"zeme_puvodu\"]=\"Německo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "4aeaf5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'Spojené království Velké Británie a Irska','zeme_puvodu']=\"Spojené království\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "9893a453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['zeme_puvodu'] == 'Valašské knížectví',\"zeme_puvodu\"]=\"Rumunsko\"\n",
+    "df.loc[df['zeme_puvodu'] == 'Rumunské království',\"zeme_puvodu\"]=\"Rumunsko\""
    ]
   },
   {
@@ -982,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "id": "5adbc502",
    "metadata": {},
    "outputs": [],
@@ -992,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "id": "bffce5dd",
    "metadata": {},
    "outputs": [],
