--- a/903 zpožděnost dramaturgie.ipynb
+++ b/903 zpožděnost dramaturgie.ipynb
@@ -506,7 +506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "americke_jednicky_v_cesku = pd.DataFrame(americke_jednicky_v_cesku[americke_jednicky_v_cesku != 1]).reset_index().rename(columns = {'interpret_hlavni':'Interpreti','pozice':'#'}).replace({\"Interpreti\": interpreti_slovnik})"
+    "americke_jednicky_v_cesku = pd.DataFrame(americke_jednicky_v_cesku[americke_jednicky_v_cesku != 1]).reset_index().rename(columns = {'interpret_hlavni':'Interpreti','pozice':'Nejlepší pozice v ČR'}).replace({\"Interpreti\": interpreti_slovnik})"
    ]
   },
   {
@@ -518,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>V USA 2× nebo víckrát jedničkou, v Česku pod vrcholem</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\">Interpreti</th><th class=\"text-nowrap\">#</th></tr></thead><tbody class=\"text-sm\"><tr><td>Maroon 5</td><td>2.0</td></tr><tr><td>Beyoncé</td><td>2.0</td></tr><tr><td>Eminem</td><td>2.0</td></tr><tr><td>Ariana Grande</td><td>5.0</td></tr><tr><td>Britney Spears</td><td>6.0</td></tr><tr><td>Post Malone</td><td>7.0</td></tr><tr><td>Mariah Carey</td><td>11.0</td></tr><tr><td>Drake</td><td>26.0</td></tr><tr><td>Cardi B</td><td>44.0</td></tr><tr><td>BTS</td><td>NaN</td></tr><tr><td>Travis Scott</td><td>NaN</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data z Billboard 100 jsou od roku 2006 do podzimu 2021, česká data do listopadu 2023.</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>V USA 2× nebo víckrát jedničkou, v Česku pod vrcholem</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\">Interpreti</th><th class=\"text-nowrap\">Nejlepší pozice v ČR</th></tr></thead><tbody class=\"text-sm\"><tr><td>Maroon 5</td><td>2.0</td></tr><tr><td>Beyoncé</td><td>2.0</td></tr><tr><td>Eminem</td><td>2.0</td></tr><tr><td>Ariana Grande</td><td>5.0</td></tr><tr><td>Britney Spears</td><td>6.0</td></tr><tr><td>Post Malone</td><td>7.0</td></tr><tr><td>Mariah Carey</td><td>11.0</td></tr><tr><td>Drake</td><td>26.0</td></tr><tr><td>Cardi B</td><td>44.0</td></tr><tr><td>BTS</td><td>NaN</td></tr><tr><td>Travis Scott</td><td>NaN</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data z Billboard 100 jsou od roku 2006 do podzimu 2021, česká data do listopadu 2023.</td></tr></tfoot></table>'"
       ]
      },
      "execution_count": 26,
@@ -1478,6 +1478,379 @@
    ],
    "source": [
     "tabulka(hvezdy_radia, titulek=\"Online bodují, v rádiu zůstali pod stovkou nejhranějších\", podtitulek=\"Data od roku 2015 do roku 2023.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46157914",
+   "metadata": {},
+   "source": [
+    "## Podíl rapu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3a1d7215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikid = pd.read_json(os.path.join(\"wikidata\",\"wikidata.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "0478ec25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikid['interpret_hlavni'] = wikid['interpret_hlavni'].apply(lambda x: nejmensispolecny(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "db4c5f96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikidzanry = wikid.explode('zanry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "4a1ec2b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zanry\n",
+       "pop music                     305\n",
+       "hip hop                       133\n",
+       "rock                          105\n",
+       "pop rock                      101\n",
+       "alternativní rock              93\n",
+       "contemporary R&B               92\n",
+       "elektronická taneční hudba     57\n",
+       "house music                    53\n",
+       "soul                           52\n",
+       "synthpop                       51\n",
+       "dance-pop                      49\n",
+       "elektropop                     46\n",
+       "rhythm and blues               45\n",
+       "hard rock                      43\n",
+       "elektronická hudba             39\n",
+       "indie pop                      38\n",
+       "taneční hudba                  35\n",
+       "trap                           34\n",
+       "electro house                  32\n",
+       "pop rap                        29\n",
+       "indie rock                     28\n",
+       "folk                           25\n",
+       "electronica                    24\n",
+       "heavy metal                    24\n",
+       "jazz                           24\n",
+       "pop punk                       24\n",
+       "blues                          22\n",
+       "punk rock                      22\n",
+       "country                        21\n",
+       "progressive house              21\n",
+       "deep house                     20\n",
+       "reggae                         20\n",
+       "blues rock                     19\n",
+       "folk rock                      19\n",
+       "nová vlna                      19\n",
+       "soft rock                      19\n",
+       "alternativní metal             18\n",
+       "hardcore hip hop               18\n",
+       "alternativní hip-hop           17\n",
+       "psychedelický rock             17\n",
+       "Gangsta rap                    16\n",
+       "rap                            16\n",
+       "Southern hip hop               15\n",
+       "progresivní rock               15\n",
+       "techno                         14\n",
+       "klasický heavy metal           13\n",
+       "folk pop                       12\n",
+       "funk                           12\n",
+       "lidová hudba                   12\n",
+       "nu metal                       12\n",
+       "rap rock                       12\n",
+       "reggaeton                      12\n",
+       "Latin pop                      11\n",
+       "alternativní R&B               11\n",
+       "art pop                        11\n",
+       "art rock                       11\n",
+       "electro                        11\n",
+       "eurodance                      11\n",
+       "glam rock                      11\n",
+       "bílý soul                      10\n",
+       "Name: interpret_hlavni, dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidzanry.groupby('zanry')['interpret_hlavni'].nunique().nlargest(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "1253925f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zanry\n",
+       "hip hop                   133\n",
+       "hardcore hip hop           18\n",
+       "alternativní hip-hop       17\n",
+       "Southern hip hop           15\n",
+       "East Coast hip hop          9\n",
+       "Atlanta hip hop             7\n",
+       "hip house                   4\n",
+       "hip-hop kultura             3\n",
+       "Latin hip hop               2\n",
+       "comedy hip hop              2\n",
+       "conscious hip hop           2\n",
+       "political hip hop           2\n",
+       "Midwest hip hop             1\n",
+       "experimentální hip hop      1\n",
+       "lofi hip hop                1\n",
+       "Name: interpret_hlavni, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidzanry[wikidzanry['zanry'].str.lower().str.contains('hip',na=False)].groupby('zanry')['interpret_hlavni'].nunique().nlargest(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f1a1b205",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zanry\n",
+       "trap               34\n",
+       "pop rap            29\n",
+       "Gangsta rap        16\n",
+       "rap                16\n",
+       "rap rock           12\n",
+       "emo rap             8\n",
+       "SoundCloud rap      5\n",
+       "West Coast rap      4\n",
+       "mafioso rap         4\n",
+       "EDM trap music      3\n",
+       "jazz rap            3\n",
+       "dirty rap           3\n",
+       "UK rap              3\n",
+       "Latin trap          3\n",
+       "cloud rap           2\n",
+       "mumble rap          2\n",
+       "progressive rap     2\n",
+       "punk rap            2\n",
+       "Rapcore             2\n",
+       "rap metal           2\n",
+       "Country rap         2\n",
+       "psychedelic rap     1\n",
+       "rage rap            1\n",
+       "Name: interpret_hlavni, dtype: int64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wikidzanry[wikidzanry['zanry'].str.lower().str.contains('rap',na=False)].groupby('zanry')['interpret_hlavni'].nunique().nlargest(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cead3bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiphoperstvo = wikidzanry[(wikidzanry['zanry'].str.lower().str.contains('rap',na=False)) | (wikidzanry['zanry'].str.lower().str.contains('hip',na=False))]['interpret_hlavni'].drop_duplicates().to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "791e45ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiphoperstvo2 = (wikidzanry[(wikidzanry['zanry'].str.lower().str.contains('rap',na=False)) | (wikidzanry['zanry'].str.lower().str.contains('hip',na=False))].groupby('interpret_hlavni').size() / wikidzanry.groupby('interpret_hlavni').size())\n",
+    "hiphoperstvo2 = hiphoperstvo2[hiphoperstvo2 > 0.66].index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f01f627",
+   "metadata": {},
+   "source": [
+    "***Hiphoper je ten, jehož seznam žánrů obsahuje hiphop/rap alespoň ze 2/3.***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "63760315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vsichni_s_zanrem = wikidzanry[~wikidzanry['zanry'].isnull()]['interpret_hlavni'].drop_duplicates().to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fb4f54cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def podil_hiphoperstva(tablica, jmeno):\n",
+    "    tablica = tablica.copy()\n",
+    "    return pd.Series(tablica[tablica['interpret_hlavni'].isin(hiphoperstvo2)].groupby('rok').size() / tablica[tablica['interpret_hlavni'].isin(vsichni_s_zanrem)].groupby('rok').size(), name=jmeno)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ab146051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roky_hiphop = [x for x in range(2006,2024)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "536cae7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cz2 = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydenni.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "92dbbe43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cz2['interpret_hlavni'] = cz2['interpret_hlavni'].apply(lambda x: nejmensispolecny(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "a900fd18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "interpret_hlavni\n",
+       "black eyed peas     458\n",
+       "eminem              271\n",
+       "kid laroi           178\n",
+       "flipsyde            163\n",
+       "macklemore          150\n",
+       "jay-z               121\n",
+       "post malone         114\n",
+       "t.i.                108\n",
+       "stromae             106\n",
+       "g-eazy               93\n",
+       "nf                   83\n",
+       "lunchmoney lewis     75\n",
+       "lil nas x            70\n",
+       "50 cent              64\n",
+       "professor green      64\n",
+       "wiz khalifa          63\n",
+       "big ali              61\n",
+       "mattafix             51\n",
+       "24kgoldn             48\n",
+       "gym class heroes     44\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cz2[cz2['interpret_hlavni'].isin(hiphoperstvo2)].groupby('interpret_hlavni').size().nlargest(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "0db00dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiphop_cz = podil_hiphoperstva(cz2, \"TOP 100 ČR - rádio\").reindex(roky_hiphop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "547a5237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiphop_usa = podil_hiphoperstva(b100, \"TOP 100 Billboard\").reindex(roky_hiphop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "86f0cf65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiphop_stream = podil_hiphoperstva(stream, \"TOP 100 ČR - digital\").reindex(roky_hiphop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "a68012be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graf uložen.\n"
+     ]
+    }
+   ],
+   "source": [
+    "graf(carovy=[hiphop_cz, hiphop_stream, hiphop_usa], target=\"hiphop\", titulek='Hip hop lidé streamují, v rádiu zní svátečně', podtitulek=f'''Jak velký podíl na všech hitparádových příčkách měli umělci hrající primárně rap, hip hop, trap atp.''', kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, procenta=[hiphop_cz, hiphop_usa, hiphop_stream], skrytnuly=True)"
    ]
   }
  ],
