vánoční písně: ČRo + grafy

--- a/903 zpožděnost dramaturgie.ipynb
+++ b/903 zpožděnost dramaturgie.ipynb
@@ -1461,23 +1461,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "id": "33ddc28a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Online bodují, v rádiu zůstali pod stovkou nejhranějších</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\">Interpreti</th><th class=\"text-nowrap\">Poměr rádio/stream</th></tr></thead><tbody class=\"text-sm\"><tr><td>Poetika</td><td>160×</td></tr><tr><td>Tomáš Klus</td><td>80×</td></tr><tr><td>Purple Disco Machine</td><td>74×</td></tr><tr><td>Imany</td><td>65×</td></tr><tr><td>David Stypka</td><td>63×</td></tr><tr><td>Bastille</td><td>59×</td></tr><tr><td>Voxel</td><td>57×</td></tr><tr><td>Robbie Williams</td><td>57×</td></tr><tr><td>Lake Malawi</td><td>54×</td></tr><tr><td>Avril Lavigne</td><td>49×</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data od roku 2015 do roku 2023.</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Online bodují, v rádiu zůstali pod stovkou nejhranějších</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\">Interpreti</th><th class=\"text-nowrap\">Týdnů v digi hitparádě</th></tr></thead><tbody class=\"text-sm\"><tr><td>Wohnout</td><td>248</td></tr><tr><td>Viktor Sheen</td><td>246</td></tr><tr><td>Yzomandias</td><td>245</td></tr><tr><td>Nik Tendo</td><td>225</td></tr><tr><td>Ektor</td><td>216</td></tr><tr><td>Škwor</td><td>157</td></tr><tr><td>Travis Scott</td><td>151</td></tr><tr><td>Earth</td><td>149</td></tr><tr><td>Ca$Hanova Bulhar</td><td>148</td></tr><tr><td>Neighbourhood</td><td>144</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data od roku 2015 do roku 2023.</td></tr></tfoot></table>'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tabulka(hvezdy_radia, titulek=\"Online bodují, v rádiu zůstali pod stovkou nejhranějších\", podtitulek=\"Data od roku 2015 do roku 2023.\")"
+    "tabulka(jenomonline, titulek=\"Online bodují, v rádiu zůstali pod stovkou nejhranějších\", podtitulek=\"Data od roku 2015 do roku 2023.\")"
    ]
   },
   {
@@ -1695,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "791e45ac",
+   "id": "d53aeb2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f01f627",
+   "id": "e60d7f1f",
    "metadata": {},
    "source": [
     "***Hiphoper je ten, jehož seznam žánrů obsahuje hiphop/rap alespoň ze 2/3.***"
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "id": "86f0cf65",
    "metadata": {},
    "outputs": [],
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 108,
    "id": "a68012be",
    "metadata": {},
    "outputs": [
@@ -1850,7 +1850,7 @@
     }
    ],
    "source": [
-    "graf(carovy=[hiphop_cz, hiphop_stream, hiphop_usa], target=\"hiphop\", titulek='Hip hop lidé streamují, v rádiu zní svátečně', podtitulek=f'''Jak velký podíl na všech hitparádových příčkách měli umělci hrající primárně rap, hip hop, trap atp.''', kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, procenta=[hiphop_cz, hiphop_usa, hiphop_stream], skrytnuly=True)"
+    "graf(carovy=[hiphop_cz, hiphop_stream, hiphop_usa], target=\"hiphop\", titulek='Hip hop lidé poslouchají online, v rádiu zní svátečně', podtitulek=f'''Podíl interpretů hrajících hiphop a rap na všech hitparádových příčkách.''', kredity=[\"Zdroj dat: ČNS IFPI a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, procenta=[hiphop_cz, hiphop_usa, hiphop_stream], skrytnuly=True)"
    ]
   }
  ],
